examples/test/testpolicy4806.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4806
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key46: value7
      key26: value27
      key15: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value43
          key41: value48
      podSelector:
        matchLabels:
          key31: value44
